<resources>
    <string name="app_name">Baby Diary</string>
    <string name="swipe_to_start">Swipe To Start</string>
    <string name="title_home">Home</string>
    <string name="title_log">Log</string>
    <string name="title_starts">Stats</string>
    <string name="title_timeline">Timeline</string>
    <string name="welcome_message">Welcome to Baby Diary</string>
    <string name="welcome_message_2">CREATE YOUR BABY\'S PROFILE TO GET STARTED</string>
    <string name="baby_name">Baby\'s Name</string>
    <string name="birthday">Birthday</string>
    <string name="theme">Theme color</string>
    <string name="premature">Premature?</string>
    <string name="duedate">Due Date</string>
    <string name="term_message">*Registration means that you agree to Baby  Diary\'s terms.</string>
    <string name="term_message_2">Terms &amp; Conditions </string>
    <string name="term_message_3">Privacy Policy</string>
    <string name="title_growthList">Growth</string>
    <string name="title_head">Head</string>
    <string name="title_length">Length</string>
    <string name="title_weight">Weight</string>
    <string name="title_add_growth">Add Growth</string>
    <string name="title_edit_growth">Edit Growth</string>
    <string name="top_setting_title">Setting</string>
    <string name="set_notification_title">Set Notification</string>
    <string name="top_growth_detail_title">Growth detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="breastfeed_name">Breastfeed</string>
    <string name="breastpump_name">Breastpump</string>
    <string name="formula_name">Formula</string>
    <string name="pump_bottle_name">Pump Bottle</string>
    <string name="food_name">Food</string>
    <string name="diaper_name">Diaper</string>
    <string name="bath_name">Bath</string>
    <string name="sleep_name">Sleep</string>
    <string name="tummy_time_name">Tummy Time</string>
    <string name="sunbathe_name">Sunbathe</string>
    <string name="play_name">Play</string>
    <string name="massage_name">Massage</string>
    <string name="drink_name">Drink</string>
    <string name="crying_name">Crying</string>
    <string name="vaccination_name">Vaccination</string>
    <string name="temperature_name">Temperature</string>
    <string name="medicine_name">Medicine</string>
    <string name="doctor_visit_name">Doctor Visit</string>
    <string name="symptom_name">Symptom</string>
    <string name="potty_name">Potty</string>
    <string name="other_activities_name">Add &amp; Move Activity </string>
    <string name="no_record">No Record</string>
    <string name="title_account">Account</string>
    <string name="add_baby">Add Baby</string>
    <string name="edit_baby">Edit Baby</string>
    <string name="left">Left</string>
    <string name="left_right">Left+Right</string>
    <string name="right">Right</string>
    <string name="started">Started</string>
    <string name="ended">Ended</string>
    <string name="duration">Duration</string>
    <string name="note">Note</string>
    <string name="add_a_note">Add a note</string>
    <string name="attachments">Attachments</string>
    <string name="add">ADD</string>
    <string name="volume">Volume</string>
    <string name="setting_general_title">General</string>
    <string name="setting_language_title">Languages</string>
    <string name="setting_darkmode_title">Dark Mode</string>
    <string name="setting_unit_title">Unit</string>
    <string name="setting_weight_title">Weight, Height, Head Size</string>
    <string name="setting_export_excel_title">Export data to Excel</string>
    <string name="setting_temperature_title">Temperature</string>
    <string name="setting_volume_title">Volume</string>
    <string name="setting_more_title">More</string>
    <string name="backup_restore_title">Backup or Restore Data</string>
    <string name="version_title">Version</string>
    <string name="remove_ads_title">Remove Ads</string>
    <string name="other_apps_title">Check Out Our Other Apps</string>
    <string name="share_title">Share Baby Diary with Your Friends</string>
    <string name="changelog_title">Changelog</string>
    <string name="setting_other">Others</string>
    <string name="setting_privacy">Privacy Policy</string>
    <string name="setting_terms">Terms and Conditions</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="custom_period">Custom Period</string>
    <string name="seven_days">Last 7 days</string>
    <string name="forthteen_days">Last 14 days</string>
    <string name="thirty_days">Last 30 days</string>
    <string name="this_month">This Month</string>
    <string name="last_month">Last Month</string>
    <string name="since_birth">Since Birth</string>
    <string name="tx_titleContact">Contact Us</string>
    <string name="tx_contact">If you have any questions or suggestions about our Terms and Conditions, do not hesitate to contact us at support@riagon.com.</string>
    <string name="tx_titlePrivacy2">Information Collection and Use</string>
    <string name="tx_titlePrivacy3">Log Data</string>
    <string name="tx_titlePrivacy4">Cookies</string>
    <string name="tx_titlePrivacy5">Ads</string>
    <string name="tx_titlePrivacy6">Analytics</string>
    <string name="tx_titlePrivacy7">Service Providers</string>
    <string name="tx_titlePrivacy8">Security</string>
    <string name="tx_titlePrivacy9">Links to Other Sites</string>
    <string name="tx_titlePrivacy10">Children’s Privacy</string>
    <string name="tx_titlePrivacy11">Changes to This Privacy Policy</string>
    <string name="tx1_privacy">Riagon built the "Perfect BMI" as an Ad Supported app. This SERVICE is provided by Riagon at no cost and is intended for use as is. This page is used to inform website visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service. If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy. The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at "Perfect BMI" unless otherwise defined in this Privacy Policy.</string>
    <string name="tx2_privacy">For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to cookies, mobile identifiers. The information that we request is will be retained by us and used as described in this privacy policy. The app does use third party services that may collect information used to identify you. Link to privacy policy of third party service providers used by the app:</string>
    <string name="tx3_privacy">Google Play Services</string>
    <string name="tx4_privacy">AdMob</string>
    <string name="tx5_privacy">We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="tx6_privacy">Cookies are files with small amount of data that is commonly used as anonymous unique identifier of your mobile device. This Service uses cookies to deliver personalized ads and to allow for frequency capping, aggregated ad reporting, and to combat fraud and abuse. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory. This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services.</string>
    <string name="tx7_privacy">This Service uses mobile ad identifiers to show personalized ads. We share such identifiers with advertising partners – ad technology providers. You can see the full list of ad technology providers here. By accepting this Privacy Policy you consent to the use of the mobile ad identifiers used in this Service. We hope you enjoy this free Service and your personalized ad experience. If you ever change your mind, you can withdraw your consent by purchasing this Service version without ads. This can be done in the application settings.</string>
    <string name="tx8_privacy">We use third party analytics tool, Firebase Analytics, to help us measure traffic and usage trends for the service. Firebase Analytics collects information such as how often users visit our services, what pages they visit when they do so, and what other pages they use prior to coming to our services. We use the information get from Firebase Analytics only to improve our services.</string>
    <string name="tx9_privacy">We may employ third-party companies and individuals due to the following reasons:</string>
    <string name="tx10_privacy">To facilitate our Service;</string>
    <string name="tx11_privacy">To provide the Service on our behalf;</string>
    <string name="tx12_privacy">To perform Service-related services;</string>
    <string name="tx13_privacy">To assist us in analyzing how our Service is used.</string>
    <string name="tx14_privacy">We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="tx15_privacy">We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</string>
    <string name="tx16_privacy">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="tx17_privacy">These Services do not address anyone under the age of 16. We do not knowingly collect personally identifiable information from children under 16. In the case we discover that a child under 16 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.</string>
    <string name="tx18_privacy">We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</string>
    <string name="email_caregive">Caregive\'email</string>
    <string name="title_email">Enter caregiver\'s email to start sharing your baby\'s data.</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="add_caregive">Add Caregive</string>
</resources>