<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/custom_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:text="@string/custom_period"
        android:textFontWeight="@integer/default_maxValue"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_selector"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/seven_days" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_selector"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/forthteen_days" />


    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_selector"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/thirty_days" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_selector"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/this_month" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_selector"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/last_month" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_selector"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/since_birth" />

    <TextView
        android:id="@+id/tx_cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:padding="15dp"
        android:text="@string/dialog_cancel"
        android:textColor="@color/colorPrimary"

        />


</LinearLayout>