<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/add_caregive"
    android:id="@+id/title_caregive"
    android:padding="10dp"
    android:background="@color/grey_bg"
    android:textColor="@color/white"
    android:gravity="center_horizontal"
    android:textStyle="bold"
    />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/title_caregive"
    android:padding="15dp">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="12dp"
        android:text="@string/title_email" />

    <EditText
        android:id="@+id/edt_email_caregive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/email_caregive"
        android:textColorHint="@color/grey"
        android:textSize="13dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_send"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_email_caregive"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_add"
        android:backgroundTint="@color/darkGrey"
        android:drawableLeft="@drawable/ic_send"
        android:paddingStart="28dp"
        android:paddingEnd="18dp"
        android:text="@string/send_invitation"
        android:textColor="@color/white" />
</RelativeLayout>
</RelativeLayout>